fix(action): autodetect ecosystem

--- a/action.yaml
+++ b/action.yaml
@@ -8,7 +8,7 @@ inputs:
       for node e.g. node=npm and for python e.g. python=poetry etc.
       maven and Gradle only supports wrappers. 
       ff the application is depending on private repositories, please see 'bring your own sbom' alias 'byosbom'
-    required: true
+    required: false
   image:
     description: |-
       image to sign and upload attestation, must be in the form of <image>:<tag>@<digest>
@@ -77,6 +77,32 @@ runs:
         echo CONTEXT=${{ inputs.context }} >> $GITHUB_ENV
       shell: bash
 
+    - name: Identify ecosystem
+      if: ${{ inputs.ecosystem == '' }}
+      run: |
+        result="$(find ${{ env.CONTEXT }} -type f -name 'go.mod')"
+        echo $result
+        if [[ "$(find ${{ env.CONTEXT }} -type f -name 'package-lock.json')" ]]; then
+         echo ECOSYSTEM=node=npm >> $GITHUB_ENV
+        elif [[ "$(find ${{ env.CONTEXT }} -type f -name 'build.gradle*')" ]]; then
+         echo ECOSYSTEM=gradle >> $GITHUB_ENV
+        elif [[ "$(find ${{ env.CONTEXT }} -type f -name 'pom.xml')" ]]; then
+         echo ECOSYSTEM=maven >> $GITHUB_ENV
+        elif [[ "$(find ${{ env.CONTEXT }} -type f -name 'go.mod')" ]]; then
+         echo ECOSYSTEM=go >> $GITHUB_ENV
+        elif [[ "$(find ${{ env.CONTEXT }} -type f -name 'poetry.lock')" ]]; then
+         echo ECOSYSTEM=python=poetry >> $GITHUB_ENV
+        elif [[ "$(find ${{ env.CONTEXT }} -type f -name 'Pipfile.lock')" ]]; then
+         echo ECOSYSTEM=python=pip >> $GITHUB_ENV
+        elif [[ "$(find ${{ env.CONTEXT }} -type f -name 'requirements.txt')" ]]; then
+          echo ECOSYSTEM=python=pip >> $GITHUB_ENV
+         return
+        else
+         echo "No supported build file found"
+         exit 1
+        fi
+      shell: bash
+
     - name: Check Image format
       run: |
         if [[ ${{ inputs.image }} != *:*@* ]]; then
@@ -87,20 +113,20 @@ runs:
       shell: bash
 
     - name: Install Go
-      if: ${{ inputs.byosbom == '' && inputs.ecosystem == 'go' }}
+      if: ${{ inputs.byosbom == '' && env.ECOSYSTEM == 'go' }}
       uses: actions/setup-go@v3
       with:
         go-version: '1.20.1'
 
     - name: Install cyclonedx-gomod
-      if: ${{ inputs.byosbom == '' && inputs.ecosystem == 'go' }}
+      if: ${{ inputs.byosbom == '' && env.ECOSYSTEM == 'go' }}
       shell: bash
       run: |
         go install github.com/CycloneDX/cyclonedx-gomod/cmd/cyclonedx-gomod@latest
         echo "Installed cyclonedx-gomod"
 
     - name: Go CycloneDX sbom
-      if: ${{ inputs.byosbom == '' && inputs.ecosystem == 'go' }}
+      if: ${{ inputs.byosbom == '' && env.ECOSYSTEM == 'go' }}
       shell: bash
       run: |
         cd $CONTEXT
@@ -108,7 +134,7 @@ runs:
         echo "Generated Go ${{ env.SBOM }}"
 
     - name: Maven CycloneDX sbom
-      if: ${{ inputs.byosbom == '' && inputs.ecosystem == 'maven' }}
+      if: ${{ inputs.byosbom == '' && env.ECOSYSTEM == 'maven' }}
       shell: bash
       run: |
         cd $CONTEXT
@@ -123,7 +149,7 @@ runs:
 
 
     - name: Gradle cycloneDX sbom
-      if: ${{ inputs.byosbom == '' && inputs.ecosystem == 'gradle' }}
+      if: ${{ inputs.byosbom == '' && env.ECOSYSTEM == 'gradle' }}
       shell: bash
       run: |
         cd $CONTEXT      
@@ -137,11 +163,11 @@ runs:
         || echo "cyclonedx-gradle-plugin not found, please add it to the repository"
 
     - name: Npm CycloneDX sbom
-      if: ${{ inputs.byosbom == '' && contains(inputs.ecosystem, 'node') }}
+      if: ${{ inputs.byosbom == '' && contains(env.ECOSYSTEM, 'node') }}
       shell: bash
       run: |
-        ecosystem="${{ inputs.ecosystem }}"
-        build_type="${ecosystem##*=}"
+        eco="${{ env.ECOSYSTEM }}"
+        build_type="${eco##*=}"
         if [[ "$build_type" == '' ||  "$build_type" != 'npm' ]]; then
           echo "a project build type is required for node ecosystem"
           echo "accepted values are npm"
@@ -150,15 +176,15 @@ runs:
         fi
         cd $CONTEXT
         npx @cyclonedx/cyclonedx-npm --output-file ${{ env.SBOM }}
-        echo "Generated ${{ inputs.ecosystem }} ${{ env.SBOM }}"
+        echo "Generated ${{ env.ECOSYSTEM }} ${{ env.SBOM }}"
 
     - name: Python CycloneDX sbom
-      if: ${{ inputs.byosbom == '' && contains(inputs.ecosystem, 'python') }}
+      if: ${{ inputs.byosbom == '' && contains(env.ECOSYSTEM, 'python') }}
       shell: bash
       run: |
         # greedy front trim matches everything up to and including the last colon
-        ecosystem="${{ inputs.ecosystem }}"
-        build_type="${ecosystem##*=}"
+        eco="${{ env.ECOSYSTEM }}"
+        build_type="${eco##*=}"
         if [[ "$build_type" == '' ||  "$build_type" != 'poetry' && "$build_type" != 'pip' && "$build_type" != 'conda-json' && "$build_type" != 'requirements' ]]; then
           echo "a project build type is required for python ecosystem"
           echo "accepted values are pip, poetry, conda-json and requirements"
@@ -167,7 +193,7 @@ runs:
         cd $CONTEXT
         pip install cyclonedx-bom
         cyclonedx-py --"$build_type" -o ${{ env.SBOM }} --format json
-        echo "Generated ${{ inputs.ecosystem }} ${{ env.SBOM }}"
+        echo "Generated ${{ env.ECOSYSTEM }} ${{ env.SBOM }}"
 
     - name: Attest with byosbom
       if: ${{ inputs.byosbom != '' }}
@@ -183,13 +209,13 @@ runs:
         echo "SBOM=${{ inputs.byosbom }}" >> $GITHUB_ENV
         echo "Using BYOSBOM ${{ env.SBOM }}"
       shell: bash
-    
+
     - name: Install Cosign
       uses: sigstore/cosign-installer@main
       with:
         cosign-release: 'v2.0.0'
     
-    #- name: Install Cosign
+    #    - name: Install Cosign
     #  run: |
     #    curl https://github.com/sigstore/cosign/releases/download/v2.0.0/cosign-linux-arm -Lo /usr/local/bin/cosign
     #    chmod +x /usr/local/bin/cosign
