--- a/.github/workflows/no-ecosystem.yaml
+++ b/.github/workflows/no-ecosystem.yaml
@@ -1,16 +1,12 @@
-name: Go Salsa with ephemeral keyless Google Token Action
+name: No Ecosystem with ephemeral keyless Github Token Salsa Action
 on: [ push ]
 
 env:
-  IMAGE: ttl.sh/salsa/gogoogletestapp:1h
-  CONTEXT: ci/golang
-  KEY: ci/cosign.key
+  IMAGE: ttl.sh/salsa/noecosystemtestapp:1h
+  CONTEXT: ci/no-ecosystem
 
 jobs:
-  build-go-google:
-    permissions:
-      contents: 'read'
-      id-token: 'write'
+  build-no-ecosystem:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -28,5 +24,3 @@ jobs:
         with:
           image: ${{ env.IMAGE }}@${{ steps.docker_build.outputs.digest }}
           context: ${{ env.CONTEXT }}
-          workload-identity-provider: ${{ secrets.SLSA_WORKLOAD_IDENTITY_PROVIDER }}
-          google-service-account: cosign-keyless@plattformsikkerhet-dev-496e.iam.gserviceaccount.com
