--- a/action.yaml
+++ b/action.yaml
@@ -253,19 +253,19 @@ runs:
 
     - name: Determine cosign google oidc provider
       if: ${{ inputs.key == '' && inputs.google-service-account != ''}}
-      run: echo "COSIGN_OIDC_PROVIDER=google-impersonate" >> $GITHUB_ENV
+      run: echo "OIDC_PROVIDER=google-impersonate" >> $GITHUB_ENV
       shell: bash
 
     - name: Determine cosign github oidc provider
       if: ${{ inputs.key == '' && inputs.google-service-account == ''}}
-      run: echo "COSIGN_OIDC_PROVIDER=github-actions" >> $GITHUB_ENV
+      run: echo "OIDC_PROVIDER=github-actions" >> $GITHUB_ENV
       shell: bash
 
     - name: Cosign keyless Google attest and upload to OCI registry
-      if: ${{ inputs.key == '' && env.COSIGN_OIDC_PROVIDER == 'google-impersonate' }}
+      if: ${{ inputs.key == '' && env.OIDC_PROVIDER == 'google-impersonate' }}
       run: |
-        cosign attest --yes --oidc-provider ${{ env.COSIGN_OIDC_PROVIDER }} --predicate ${{ env.SBOM_PATH }} --type ${{ env.PREDICATE_TYPE }} ${{ env.IMAGE }}
-        echo "keyless $env.COSIGN_OIDC_PROVIDER attestation finished"
+        cosign attest --yes --oidc-provider ${{ env.OIDC_PROVIDER }} --predicate ${{ env.SBOM_PATH }} --type ${{ env.PREDICATE_TYPE }} ${{ env.IMAGE }}
+        echo "keyless $env.OIDC_PROVIDER attestation finished"
       shell: bash
       env:
         GOOGLE_SERVICE_ACCOUNT_NAME: ${{ inputs.google-service-account }}
@@ -273,10 +273,10 @@ runs:
         PREDICATE_TYPE: ${{ inputs.type }}
 
     - name: Cosign keyless Github attest and upload to OCI registry
-      if: ${{ inputs.key == '' && env.COSIGN_OIDC_PROVIDER == 'github-actions' }}
+      if: ${{ inputs.key == '' && env.OIDC_PROVIDER == 'github-actions' }}
       run: |
         cosign attest --yes --predicate ${{ env.SBOM_PATH }} --type ${{ env.PREDICATE_TYPE }} ${{ env.IMAGE }}
-        echo "keyless $env.COSIGN_OIDC_PROVIDER attestation finished"
+        echo "keyless $env.OIDC_PROVIDER attestation finished"
       shell: bash
       env:
         SBOM_PATH: ${{ env.CONTEXT }}/${{ env.SBOM }}
