--- a/.github/workflows/no-ecosystem.yaml
+++ b/.github/workflows/no-ecosystem.yaml
@@ -7,6 +7,9 @@ env:
 
 jobs:
   build-no-ecosystem:
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -24,5 +27,3 @@ jobs:
         with:
           image: ${{ env.IMAGE }}@${{ steps.docker_build.outputs.digest }}
           context: ${{ env.CONTEXT }}
-          workload-identity-provider: ${{ secrets.SLSA_WORKLOAD_IDENTITY_PROVIDER }}
-          google-service-account: cosign-keyless@plattformsikkerhet-dev-496e.iam.gserviceaccount.com
