--- a/.github/workflows/go-github.yaml
+++ b/.github/workflows/go-github.yaml
@@ -1,4 +1,4 @@
-name: Go Salsa with ephemeral keyless Google Token Action
+name: Go Salsa with ephemeral keyless GitHub Token Action
 on: [ push ]
 
 env:
