--- a/action.yaml
+++ b/action.yaml
@@ -218,18 +218,18 @@ runs:
         echo "SBOM=${{ inputs.byosbom }}" >> $GITHUB_ENV
         echo "Using BYOSBOM ${{ env.SBOM }}"
       shell: bash
-        #
-        #- name: Install Cosign
-        #  uses: sigstore/cosign-installer@main
-        #  with:
-        #    cosign-release: 'v2.0.0'
-      #
+    
     - name: Install Cosign
-      run: |
-        curl https://github.com/sigstore/cosign/releases/download/v2.0.0/cosign-linux-amd64 -Lo /usr/local/bin/cosign
-        chmod +x /usr/local/bin/cosign
-        echo "Installed cosign"
-      shell: bash
+      uses: sigstore/cosign-installer@main
+      with:
+        cosign-release: 'v2.0.0'
+    
+    #- name: Install Cosign
+    #  run: |
+    #    curl https://github.com/sigstore/cosign/releases/download/v2.0.0/cosign-linux-amd64 -Lo /usr/local/bin/cosign
+    #    chmod +x /usr/local/bin/cosign
+    #    echo "Installed cosign"
+    #  shell: bash
 
     - name: Authenticate to Google Cloud with workload identity
       if: ${{ inputs.key == '' && inputs.google-service-account != '' && inputs.workload-identity-provider != ''}}
